@@ -8,13 +8,13 @@ import jakarta.inject.Named;
 import java.time.Instant;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
+import java.util.function.Function;
 import java.util.function.Supplier;
-import lombok.AccessLevel;
 import lombok.CustomLog;
-import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import org.hiero.mirror.common.domain.DomainBuilder;
 import org.hiero.mirror.common.domain.StreamType;
@@ -72,8 +72,8 @@ public class RecordFileBuilder {
                 }
             }
 
-            var consensusEnd = recordItems.get(recordItems.size() - 1).getConsensusTimestamp();
-            var consensusStart = recordItems.get(0).getConsensusTimestamp();
+            var consensusEnd = recordItems.getLast().getConsensusTimestamp();
+            var consensusStart = recordItems.getFirst().getConsensusTimestamp();
             Instant instant = Instant.ofEpochSecond(0, consensusStart);
             String filename = StreamFilename.getFilename(StreamType.RECORD, DATA, instant) + ".gz";
 
@@ -98,12 +98,15 @@ public class RecordFileBuilder {
             return this;
         }
 
-        public Builder recordItem(Supplier<RecordItemBuilder.Builder<?>> recordItem) {
-            return recordItems(i -> i.count(1).entities(1).template(recordItem));
+        public Builder recordItem(Function<RecordItemBuilder, RecordItemBuilder.Builder<?>> template) {
+            return recordItems(i -> i.count(1).template(template));
         }
+        //        public Builder recordItem(Supplier<RecordItemBuilder.Builder<?>> recordItem) {
+        //            return recordItems(i -> i.count(1).entities(1, r -> recordItem.get()));
+        //        }
 
         public Builder recordItem(TransactionType type) {
-            return recordItems(i -> i.count(1).entities(1).type(type));
+            return recordItems(i -> i.count(1).type(type));
         }
 
         public Builder recordItems(Consumer<ItemBuilder> recordItems) {
@@ -117,14 +120,15 @@ public class RecordFileBuilder {
     public class ItemBuilder {
 
         private int count = 100;
-        private int entities = 10;
+        private int entities = 0;
+        private Function<RecordItemBuilder, RecordItemBuilder.Builder<?>> entityTemplate;
         private boolean entityAutoCreation = false;
         private SubType subType = SubType.STANDARD;
         private TransactionType type = TransactionType.UNKNOWN;
-        private Supplier<RecordItemBuilder.Builder<?>> template;
+        private Function<RecordItemBuilder, RecordItemBuilder.Builder<?>> template;
 
-        @Getter(lazy = true, value = AccessLevel.PRIVATE)
-        private final List<RecordItemBuilder.Builder<?>> builders = createBuilders();
+        //        @Getter(lazy = true, value = AccessLevel.PRIVATE)
+        //        private final List<RecordItemBuilder.Builder<?>> builders = createBuilders();
 
         private ItemBuilder() {}
 
@@ -134,9 +138,11 @@ public class RecordFileBuilder {
             return this;
         }
 
-        public ItemBuilder entities(int entities) {
+        public ItemBuilder entities(
+                int entities, Function<RecordItemBuilder, RecordItemBuilder.Builder<?>> entityTemplate) {
             Assert.isTrue(entities > 0, "entities must be positive");
             this.entities = entities;
+            this.entityTemplate = entityTemplate;
             return this;
         }
 
@@ -151,11 +157,17 @@ public class RecordFileBuilder {
             return this;
         }
 
-        public ItemBuilder template(Supplier<RecordItemBuilder.Builder<?>> template) {
+        public ItemBuilder template(Function<RecordItemBuilder, RecordItemBuilder.Builder<?>> template) {
             Assert.notNull(template, "template must not be null");
             this.template = template;
             return this;
         }
+
+        //        public ItemBuilder template(Supplier<RecordItemBuilder.Builder<?>> template) {
+        //            Assert.notNull(template, "template must not be null");
+        //            this.template = template;
+        //            return this;
+        //        }
 
         public ItemBuilder type(TransactionType type) {
             Assert.notNull(type, "type must not be null");
@@ -165,13 +177,17 @@ public class RecordFileBuilder {
         }
 
         private Supplier<RecordItem> build() {
-            var recordItemBuilders = getBuilders();
-            int builderSize = recordItemBuilders.size();
+            var entityBuilders = createEntityBuilders();
+            var templateBuilder = buildTemplate();
+            Assert.isTrue(
+                    !entityBuilders.isEmpty() || templateBuilder != null, "entityBuilders and template are both null");
+
             var counter = new AtomicInteger(count);
-            var creates = new ArrayDeque<>(recordItemBuilder.getCreateTransactions());
+            var creates = new ArrayDeque<>(
+                    entityAutoCreation ? recordItemBuilder.getCreateTransactions() : Collections.emptyList());
 
             return () -> {
-                if (entityAutoCreation && !creates.isEmpty()) {
+                if (!creates.isEmpty()) {
                     var builder = creates.remove();
                     var recordItem = builder.build();
                     log.info("Creating {}", TransactionType.of(recordItem.getTransactionType()));
@@ -183,20 +199,24 @@ public class RecordFileBuilder {
                     return null;
                 }
 
-                var index = remaining % builderSize;
-                var builder = recordItemBuilders.get(index);
-                return builder.build();
+                if (!entityBuilders.isEmpty()) {
+                    var index = (count - remaining) % entityBuilders.size();
+                    var builder = entityBuilders.get(index);
+                    return builder.build();
+                } else {
+                    return templateBuilder.apply(recordItemBuilder).build();
+                }
             };
         }
 
-        private Supplier<RecordItemBuilder.Builder<?>> buildTemplate() {
+        private Function<RecordItemBuilder, RecordItemBuilder.Builder<?>> buildTemplate() {
             if (template != null) {
                 return template;
             }
 
             if (subType != SubType.STANDARD) {
                 return switch (subType) {
-                    case TOKEN_TRANSFER -> () -> recordItemBuilder.cryptoTransfer(TransferType.TOKEN);
+                    case TOKEN_TRANSFER -> (recordItemBuilder) -> recordItemBuilder.cryptoTransfer(TransferType.TOKEN);
                     default -> throw new IllegalArgumentException("subType not supported: " + subType);
                 };
             }
@@ -205,16 +225,13 @@ public class RecordFileBuilder {
                 throw new IllegalArgumentException("type must not be unknown");
             }
 
-            return recordItem(type);
+            return r -> recordItem(type).get();
         }
 
-        private List<RecordItemBuilder.Builder<?>> createBuilders() {
-            List<RecordItemBuilder.Builder<?>> builderList = new ArrayList<>();
-            int maxEntities = Math.min(entities, count);
-            var builderTemplate = buildTemplate();
-
-            for (int i = 0; i < maxEntities; i++) {
-                builderList.add(builderTemplate.get());
+        private List<RecordItemBuilder.Builder<?>> createEntityBuilders() {
+            var builderList = new ArrayList<RecordItemBuilder.Builder<?>>();
+            for (int i = 0; i < entities; i++) {
+                builderList.add(entityTemplate.apply(recordItemBuilder));
             }
 
             return builderList;
